<resources>
    <string name="app_name">Test work</string>
    <string name="begin_and_end_date">Begin and End date</string>
    <string name="title">Title</string>
    <string name="artist_role">Artist</string>
    <string name="vincent">Vincent</string>
    <string name="department">Department</string>
    <string name="medium">Medium</string>
    <string name="dimensions">Dimensions</string>
    <string name="dimension_text">30x20</string>
    <string name="btn_try_again">Try again…</string>
    <string name="year">%1$s - %2$s</string>
    <string name="bio">%1$s ( %2$s )</string>
    <string name="culture">Culture</string>
</resources>